apps/staging/brutus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: brutus-n8n
spec:
  selector:
    app: brutus-n8n
  ports:
    - port: 80
      targetPort: 5678
